# Homework_19_2

./: .env_sample  00_category.json  00_products.json  README.md  data.txt  groups.json  pyproject.toml  requirements.txt
article/: admin.py  models.py  urls.py  views.py
article/migrations/: 0001_initial.py
article/templates/article/: article_confirm_delete.html  article_detail.html  article_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_feedback_created_at.py  0002_product_manufactured_at.py  0002_product_manufactured_at_alter_product_name.py  0003_alter_product_price.py  0003_remove_product_manufactured_at.py  0004_version.py  0005_alter_version_product.py  0006_product_owner.py  0007_alter_product_options_product_is_published.py
catalog/templates/catalog/: base.html  category_list.html  contact_list.html  index_contacts.html  index_home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_info.html
catalog/templates/catalog/includes/: inc_bottom.html  inc_catalog_menu.html
config/: settings.py  urls.py
fixtures/: 001_catalog_category_data.json  002_catalog_product_data.json  003_catalog_contacts_data.json  catalog_data.json
users/: models.py  service.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/: login.html
users/templates/users/: password_reset_form.html  user_edit_form.html  user_form.html
